# almost-refinement

./: LICENSE  README.md  shitty-refinement.cabal
example/: Bad.hs  Good.hs  Liar.hs  MutableTree.hs  One.hs  SavageTree.hs  Three.hs  Tree.hs  Two.hs  Two.hsc  Ugly.hs  Wow.hs  example.hs  tree.c  tree.h  two.c  two.h
src/Test/: Refine.hs
