name:                shitty-refinement
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
category:            Formal Methods
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.8


library
  build-depends:      base                            >= 3          && < 5
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , template-haskell                >= 2.10       && < 3

  exposed-modules:    Test.Refine
  hs-source-dirs:     src


executable example
  build-depends:      base                            >= 3          && < 5
                    , deepseq                         >= 1.4        && < 1.5
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , transformers                    >= 0.3        && < 0.6
                    , shitty-refinement
  hs-source-dirs:     example
  main-is:            example.hs
  extra-lib-dirs:     example
  c-sources:          example/tree.c